--- a/CAC2526/src/NavBar.css
+++ b/CAC2526/src/NavBar.css
@@ -76,6 +76,8 @@
 
 .navBtn.outlined {
     border: 1px solid var(--textColor);
+    border-radius: 24px;
+    padding: 4px 16px 4px 16px;
 }
 
 .navBtn:hover {
