--- a/CAC2526/src/Game.module.css
+++ b/CAC2526/src/Game.module.css
@@ -128,10 +128,22 @@
     box-shadow: 0px 1px 1.6px #2c2c2c;
     background: #fff;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+video {
+    max-width: 80%;
+    max-height: 600px;
+    align-self: center;
+    margin-bottom: 16px;
+    border-radius: 32px;
+    overflow: hidden;
 }
 
 .singlePrompt {
-    margin: 0;
+    margin: 0px 0px 24px 0px;
     font-size: 20px;
     line-height: 1.4;
     white-space: pre-wrap;
@@ -143,7 +155,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 16px;
+    gap: 96px;
     margin-top: 24px;
 }
 
