--- a/CAC2526/src/Game.module.css
+++ b/CAC2526/src/Game.module.css
@@ -50,12 +50,6 @@
     transition: all 0.2s ease;
 }
 
-.challengeOption:hover {
-    opacity: 0.9;
-    box-shadow: 0 0 1px 3px var(--highlight);
-    border-color: var(--accent);
-}
-
 .selectedCorrect {
     box-shadow: 0 0 4px 4px rgba(0, 200, 0, 0.3) !important;
     border-color: rgb(0, 160, 0) !important;
@@ -87,12 +81,15 @@
 
     margin-top: 16px;
     padding: 12px 24px;
-    transition: opacity 0.2s ease;
+    transition: opacity 0.2s ease, box-shadow 0.2s ease;
     cursor: pointer;
 }
 
 .challengeBtn:hover {
-    opacity: 0.8;
+    opacity: 0.7;
+    box-shadow: 0 1px 1px 1.6px var(--highlight);
+    border-color: var(--accent);
+    cursor: pointer;
 }
 
 .feedback {
@@ -173,5 +170,8 @@ video {
     transition: opacity 0.2s ease;
 }
 .binaryBtn:hover {
-    opacity: 0.8;
+    opacity: 0.7;
+    box-shadow: 0 1px 1px 1.6px var(--highlight);
+    border-color: var(--accent);
+    cursor: pointer;
 }
