--- a/CAC2526/src/Game.module.css
+++ b/CAC2526/src/Game.module.css
@@ -53,11 +53,13 @@
 .selectedCorrect {
     box-shadow: 0 0 4px 4px rgba(0, 200, 0, 0.3) !important;
     border-color: rgb(0, 160, 0) !important;
+    border-radius: 20px;
 }
 
 .selectedWrong {
     box-shadow: 0 0 4px 4px rgba(200, 0, 0, 0.3) !important;
     border-color: rgb(200, 0, 0) !important;
+    border-radius: 20px;
 }
 
 .challengeText {
@@ -77,17 +79,18 @@
     font-size: 18px;
     font-family: 'Lexend', sans-serif;
 
-    box-shadow: 0px 2px #106159;
+    box-shadow: 0px 2px var(--darkAccent);
 
     margin-top: 16px;
     padding: 12px 24px;
-    transition: opacity 0.2s ease, box-shadow 0.2s ease;
+    transition: opacity 0.15s ease, box-shadow 0.15s ease;
     cursor: pointer;
 }
 
 .challengeBtn:hover {
     opacity: 0.7;
-    box-shadow: 0 1px 1px 1.6px var(--highlight);
+    box-shadow: 0px 4px 0px var(--darkAccent);
+    transform: translate(0px, -2px);
     border-color: var(--accent);
     cursor: pointer;
 }
@@ -101,16 +104,22 @@
 .nextBtn {
     margin-top: 16px;
     background: none;
-    border: 1px solid var(--textColor);
-    border-radius: 16px;
-    padding: 8px 16px;
-    font-size: 16px;
+    border: none;
+    border-radius: 24px;
+    background-color: var(--accent);
+    box-shadow: 0px 2px 0px var(--darkAccent);
+    color: white;
+    padding: 8px 24px 8px 24px;
+    font-size: 24px;
     font-family: 'Lexend', sans-serif;
-    cursor: pointer;
-    transition: opacity 0.2s ease;
+    transition: opacity 0.15s ease, box-shadow 0.15s ease;
 }
 .nextBtn:hover {
-    opacity: 0.6;
+    opacity: 0.7;
+    box-shadow: 0px 4px 0px var(--darkAccent);
+    transform: translate(0px, -2px);
+    border-color: var(--accent);
+    cursor: pointer;
 }
 
 /*Single card for the other mode or smth*/
@@ -162,16 +171,16 @@ video {
     border: none;
     border-radius: 24px;
     color: white;
-    box-shadow: 0px 2px #106159;
+    box-shadow: 0px 2px var(--darkAccent);
     padding: 12px 24px;
     font-size: 18px;
     font-family: 'Lexend', sans-serif;
-    cursor: pointer;
-    transition: opacity 0.2s ease;
+    transition: opacity 0.15s ease, box-shadow 0.15s ease;
 }
 .binaryBtn:hover {
     opacity: 0.7;
-    box-shadow: 0 1px 1px 1.6px var(--highlight);
+    box-shadow: 0px 4px 0px var(--darkAccent);
+    transform: translate(0px, -2px);
     border-color: var(--accent);
     cursor: pointer;
 }
