--- a/CAC2526/src/NavBar.css
+++ b/CAC2526/src/NavBar.css
@@ -98,3 +98,30 @@
 .navLink:hover {
     opacity: 0.6;
 }
+
+.profileBtn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    border: 1px solid #cfd8d6;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.avatar {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.avatar.placeholder {
+    display: grid;
+    place-items: center;
+    background: #e4ecea;
+    color: #1c1c1c;
+    font-weight: 600;
+}
